Navigation vers tp1

--- a/index.html
+++ b/index.html
@@ -1,10 +1,12 @@
 <!DOCTYPE html>
 <html lang="fr" dir="ltr">
-  <head>
-    <meta charset="utf-8">
-    <title>Cours Geolocalisation et Cartographie</title>
-  </head>
-  <body>
-
-  </body>
+<head>
+  <meta charset="utf-8">
+  <title>Cours Geolocalisation et Cartographie</title>
+</head>
+<body>
+  <div>
+    <a href="./ExoCarto1/tp1.html">Acceder au TP1</a>
+  </div>
+</body>
 </html>
