Continuage du TP

--- a/ExoCarto1/tp1.html
+++ b/ExoCarto1/tp1.html
@@ -8,13 +8,22 @@
 </head>
 <body>
   <section id="exercice2">
-    <div id="function1">
+    <h1>Geolocalisation :</h1>
+    <div class="function1">
       <h2>Avec la fonction getCurrentPosition()</h2>
       <ul>
       </ul>
     </div>
-    <div id="function2">
+    <div class="function2">
       <h2>Avec la fonction watchPosition()</h2>
+      <ul>
+      </ul>
+    </div>
+  </section>
+
+  <section id="exercice3">
+    <div>
+      <h2>Orientation du telephone</h2>
       <ul>
       </ul>
     </div>
