No rage de mon continuage

--- a/ExoCarto1/tp1.html
+++ b/ExoCarto1/tp1.html
@@ -8,7 +8,7 @@
 </head>
 <body>
   <section id="exercice2">
-    <h1>Geolocalisation :</h1>
+    <h1>Geolocalisation : </h1>
     <div class="function1">
       <h2>Avec la fonction getCurrentPosition()</h2>
       <ul>
@@ -22,8 +22,14 @@
   </section>
 
   <section id="exercice3">
-    <div>
+    <h1>Orientation et rotation : </h1>
+    <div class="function1">
       <h2>Orientation du telephone</h2>
+      <ul>
+      </ul>
+    </div>
+    <div class="function2">
+      <h2>Acceleration du telephone</h2>
       <ul>
       </ul>
     </div>
