--- a/ExoCarto1/tp1.html
+++ b/ExoCarto1/tp1.html
@@ -34,5 +34,13 @@
       </ul>
     </div>
   </section>
+
+  <section id="exercice4">
+    <h1>Touch event :</h1>
+    <div>
+      <ul>
+      </ul>
+    </div>
+  </section>
 </body>
 </html>
