--- a/index.html
+++ b/index.html
@@ -6,7 +6,10 @@
 </head>
 <body>
   <div>
-    <a href="./ExoCarto1/tp1.html">Acceder au TP1</a>
+    <ul>
+    <li><a href="./ExoCarto1/tp1.html">Acceder au TP1</a></li>
+    <li><a href="./ExoCarto2/tp2.html">Acceder au TP2</a></li>
+  </ul>
   </div>
 </body>
 </html>
