--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
     <ul>
     <li><a href="./ExoCarto1/tp1.html">Acceder au TP1</a></li>
     <li><a href="./ExoCarto2/tp2.html">Acceder au TP2</a></li>
+    <li><a href="./ExoCarto3/tp3.html">Acceder au TP3 (PAS ENCORE COMMENCE)</a></li>
   </ul>
   </div>
 </body>
