--- a/ExoCarto3/tp3.html
+++ b/ExoCarto3/tp3.html
@@ -46,9 +46,7 @@
     </section>
   </div>
   <script type="text/javascript" src="./src/three.js"></script>
-  <script type="module">
-
-  import { GLTFLoader } from './src/GLTFLoader.js' ;
+  <script>
 
   const scene = new THREE.Scene();
   const camera = new THREE.PerspectiveCamera(50, 1, 0.1, 1000);
@@ -59,36 +57,15 @@
   const renderer = new THREE.WebGLRenderer({ canvas: threeJSCanvas });
   renderer.setSize(500, 500);
 
-  /*
   const geometry = new THREE.BoxGeometry();
   const material = new THREE.MeshNormalMaterial();
   const cube = new THREE.Mesh( geometry, material );
   scene.add( cube );
 
-  camera.lookAt( cube.position ); */
-
-
-  const loader = new GLTFLoader() ;
-  loader.load('./models/Horse.glb', function ( gltf ) {
-
-	scene.add( gltf.scene );
-
-}, undefined, function ( error ) {
-
-	console.error( error );
-
-} );
-
-const animate = function () {
-  requestAnimationFrame( animate );
-
-  //  cube.rotation.x += 0.01;
-  //  cube.rotation.y += 0.01;
+  camera.lookAt( cube.position ); 
 
   renderer.render( scene, camera );
-};
 
-animate();
 </script>
 </body>
 </html>
