--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
     <li><a href="./ExoCarto1/tp1.html">Acceder au TP1</a></li>
     <li><a href="./ExoCarto2/tp2.html">Acceder au TP2</a></li>
     <li><a href="./ExoCarto3/tp3.html">Acceder au TP3</a></li>
+    <li><a href="./ExoCarto4/tp4.html">Acceder au TP4</a></li>
   </ul>
   </div>
 </body>
