--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
     <li><a href="./ExoCarto2/tp2.html">Acceder au TP2</a></li>
     <li><a href="./ExoCarto3/tp3.html">Acceder au TP3</a></li>
     <li><a href="./ExoCarto4/tp4.html">Acceder au TP4</a></li>
+    <li><a href="./MiniProjet/projet.html">Voir le projet</a></li>
   </ul>
   </div>
 </body>
