--- a/MiniProjet/projet.html
+++ b/MiniProjet/projet.html
@@ -26,7 +26,7 @@
   <section id="question2">
     <h1>Utilisation du SVG</h1>
     <div class="svg">
-      <img src="./images/arrow.svg" />
+      <img src="./images/arrow.svg" id="needle" />
     </div>
   </section>
 
